--- a/tk_crop.html
+++ b/tk_crop.html
@@ -394,8 +394,8 @@ function getOrder()
 </head>
 <body>
 
-<h1>Travian Capital Crop/Oasis/Bakery Order</h1>
-written by Bryan H
+<h1>Travian Kingdoms Capital Crop/Oasis/Bakery Order</h1>
+written by Erremerre Design
 <br><br>Field Count
 <form name="o0"> 
 <select name="no0" onChange="seto0(document.o0.no0.options[document.o0.no0.options.selectedIndex].value)">
